@@ -12,6 +12,7 @@ __PACKAGE__->meta->columns(
   abbreviation      => { type => 'text' },
   description       => { type => 'text' },
   id                => { type => 'serial', not_null => 1 },
+  report_separate   => { type => 'boolean', default => 'false' },
   used_for_purchase => { type => 'boolean', default => 'true' },
   used_for_sale     => { type => 'boolean', default => 'true' },
 );
